--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Junsu_log</title>
+    <style>
+      body {
+        flex-shrink: 0;
+        flex-grow: 1;
+        max-width: 100%;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        font-family: iawriter-mono, Nitti, Menlo, Courier, monospace;
+        font-size: 15px;
+        letter-spacing: 0.055em;
+        line-height: 1.6;
+        width: 100%;
+        z-index: 4;
+        padding-bottom: 30vh;
+        padding-left: calc(96px + env(safe-area-inset-left));
+        padding-right: calc(96px + env(safe-area-inset-right));
+      }
+    </style>
   </head>
   <body></body>
 </html>
